--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+.form-compact {
+    font-size: 0.8em;
+}
+
+.form-compact .form-control {
+    padding: 1px 2px;
+    height: 24px !important;
+    font-size:1em;
+}
+.form-compact label {
+    margin-bottom: 1px;
+}
+.form-compact .form-group
+{
+    margin-bottom:0px;
+}
