working on imagedb

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,6 +13,9 @@
                     <a class="nav-link" [routerLink]="link.link">{{link.label}}</a>
                 </li>
             </ng-container>
+            <li routerLinkActive="active" class="nav-item">
+                <a class="nav-link" [routerLink]="['/imagedb/imagedb/night/2018-03-25']">ImageDB</a>
+            </li>
         </ul>
     </div>
 </nav>
