--- a/src/app/imagedb/observation-details/observation-details.component.html
+++ b/src/app/imagedb/observation-details/observation-details.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="observation$ | async; let obs">
-    <h2>{{obs.Name}}</h2>
-    <p>Telescope: {{obs.Telescope}}</p>
+    <h2>Finished observation {{obs[0].Name}}</h2>
+    <p>Telescope: {{obs[0].Telescope}}</p>
 </div>
