--- a/src/app/imagedb/observation-details/observation-details.component.html
+++ b/src/app/imagedb/observation-details/observation-details.component.html
@@ -1,26 +1,41 @@
 <h2>Finished observation {{observation}}</h2>
 
 <div *ngIf="observation$ | async; let obs;">
-    <p>Telescope: {{obs[0].Telescope}}</p>
+    <p>Telescope: {{obs.telescope}}</p>
 </div>
 
 <h2>Images</h2>
 
 <table class="table thead-dark table-striped table-bordered table-hover table-sm">
     <tr>
-        <th>Filename</th>
+        <th>#</th>
+        <th>Date Obs</th>
         <th>Image Type</th>
+        <th>Target</th>
         <th>Binning</th>
         <th>Filter</th>
         <th>ExpTime</th>
+        <th>Preview</th>
+        <th>Download</th>
     </tr>
-    <ng-container *ngIf="images$ | async; let images;">
-        <tr *ngFor="let img of images | async">
-            <td>{{img.Filename}}</td>
-            <td>{{img.ImageType}}</td>
-            <td>{{img.Binning}}</td>
-            <td>{{img.Filter}}</td>
-            <td>{{img.ExpTime}}s</td>
+    <ng-template #loading>
+        <tr>
+            <td colspan="9">
+                <div class="loader"></div>
+            </td>
         </tr>
-    </ng-container>
+    </ng-template>
+    <tbody *ngIf="images$ | async as images; else loading">
+    <tr *ngFor="let img of images; index as i;">
+        <td>{{i+1}}</td>
+        <td>{{img.date_obs}}</td>
+        <td>{{img.image_type}}</td>
+        <td>{{img.target_name}}</td>
+        <td>{{img.binning}}</td>
+        <td>{{img.filter}}</td>
+        <td>{{img.exp_time}}s</td>
+        <td></td>
+        <td><a class="btn btn-primary btn-sm" [href]="'/download/' + img.filename">download</a></td>
+    </tr>
+    </tbody>
 </table>
