collapsible image list

--- a/src/app/imagedb/observation-details/observation-details.component.html
+++ b/src/app/imagedb/observation-details/observation-details.component.html
@@ -4,8 +4,25 @@
     <p>Telescopes: {{obs.telescopes.join(', ')}}</p>
 </div>
 
-<h2>Raw Images</h2>
-<pytel-list-images [images$]="raw_images$"></pytel-list-images>
+<h4>
+    <i class="fa" [class.fa-plus-circle]="collapseRaw" [class.fa-minus-circle]="!collapseRaw"
+       (click)="collapseRaw = !collapseRaw" [attr.aria-expanded]="!collapseRaw"
+       aria-controls="collapseRaw"></i>
+    Raw files (available: )
+    <a class="btn btn-sm btn-dark" href="#">Download all</a>
+</h4>
+<div id="collapseRaw" [collapse]="collapseRaw">
+    <pytel-list-images [images$]="raw_images$"></pytel-list-images>
+</div>
 
-<h2>Reduced Images</h2>
-<pytel-list-images [images$]="reduced_images$"></pytel-list-images>
+
+<h4>
+    <i class="fa" [class.fa-plus-circle]="collapseReduced" [class.fa-minus-circle]="!collapseReduced"
+       (click)="collapseReduced = !collapseReduced" [attr.aria-expanded]="!collapseReduced"
+       aria-controls="collapseReduced"></i>
+    Reduced files (available: )
+    <a class="btn btn-sm btn-dark" href="#">Download all</a>
+</h4>
+<div id="collapseBasic" [collapse]="collapseReduced">
+    <pytel-list-images [images$]="reduced_images$"></pytel-list-images>
+</div>
