finished migration to new methods for searching observations and images

--- a/src/app/imagedb/image-details/image-details.component.html
+++ b/src/app/imagedb/image-details/image-details.component.html
@@ -27,7 +27,7 @@
         </tr>
     </table>
 
-    <div class="row">
+    <div class="row" *ngIf="scheme$ | async as scheme;">
         <div class="col-md-8">
             <img src="/preview/{{image[0].scheme}}:{{image[0].filename}}" width="100%">
         </div>
