--- a/src/app/imagedb/list-images/list-images.component.html
+++ b/src/app/imagedb/list-images/list-images.component.html
@@ -1,3 +1,23 @@
+<div class="row" *ngIf="count$ | async as count">
+    <div class="col-6">
+        <pagination #pagination [totalItems]="count" [itemsPerPage]="itemsPerPage"
+                    [boundaryLinks]="true" [maxSize]="5"
+                    previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"
+                    (pageChanged)="pageChanged($event)"></pagination>
+    </div>
+    <div class="col-6">
+        <div class="float-right">
+            Items per page:
+            <select class="select" (change)="itemsPerPage=$event.target.value">
+                <option [selected]="itemsPerPage==10" value="10">10</option>
+                <option [selected]="itemsPerPage==25" value="25">25</option>
+                <option [selected]="itemsPerPage==50" value="50">50</option>
+                <option [selected]="itemsPerPage==100" value="100">100</option>
+            </select>
+        </div>
+    </div>
+</div>
+
 <table class="table thead-dark table-striped table-bordered table-hover table-sm" style="font-size: small">
     <tr>
         <th>#</th>
@@ -19,7 +39,7 @@
     </ng-template>
     <tbody *ngIf="images$ | async as images; else loading">
     <tr *ngFor="let img of images; index as i;">
-        <td>{{i+1}}</td>
+        <td>{{i + 1 + (currentPage * itemsPerPage)}}</td>
         <td>
             <a [routerLink]="['../../image', img.filename]">
                 <i class="fa fa-file-image-o" aria-hidden="true"> </i>
