--- a/src/app/imagedb/observation-details/observation-details.component.html
+++ b/src/app/imagedb/observation-details/observation-details.component.html
@@ -13,11 +13,9 @@
        (click)="collapseRaw = !collapseRaw" [attr.aria-expanded]="!collapseRaw"
        aria-controls="collapseRaw"></i>
     Raw files
-    <span *ngIf="raw_images$ | async as images; else loading">(count: {{images.length}})</span>
-    <a class="btn btn-sm btn-dark" href="#">Download all</a>
 </h5>
 <div id="collapseRaw" [collapse]="collapseRaw">
-    <pytel-list-images [images$]="raw_images$"></pytel-list-images>
+    <pytel-list-images [module]="module" [observation]="observation" [reduction_status]="0"></pytel-list-images>
 </div>
 
 <h5>
@@ -25,9 +23,7 @@
        (click)="collapseReduced = !collapseReduced" [attr.aria-expanded]="!collapseReduced"
        aria-controls="collapseReduced"></i>
     Reduced files
-    <span *ngIf="reduced_images$ | async as images; else loading">(count: {{images.length}})</span>
-    <a class="btn btn-sm btn-dark" href="#">Download all</a>
 </h5>
 <div id="collapseBasic" [collapse]="collapseReduced">
-    <pytel-list-images [images$]="reduced_images$"></pytel-list-images>
+    <pytel-list-images [module]="module" [observation]="observation" [reduction_status]="1"></pytel-list-images>
 </div>
