--- a/src/app/imagedb/list-images/list-images.component.html
+++ b/src/app/imagedb/list-images/list-images.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-6">
         <div class="float-right">
-            {{count}} items,
+            {{count}} item(s),
             per page:
             <select class="select" (change)="itemsPerPage=$event.target.value; updateList();">
                 <option [selected]="itemsPerPage==10" value="10">10</option>
