started working on search images page

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -14,7 +14,10 @@
                 </li>
             </ng-container>
             <li routerLinkActive="active" class="nav-item">
-                <a class="nav-link" [routerLink]="['/imagedb/imagedb/night/2018-03-25']">ImageDB</a>
+                <a class="nav-link" [routerLink]="['/imagedb/imagedb/night/2018-03-25']">2018-03-25</a>
+            </li>
+            <li routerLinkActive="active" class="nav-item">
+                <a class="nav-link" [routerLink]="['/imagedb/imagedb/']">ImageDB</a>
             </li>
         </ul>
     </div>
