--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,7 +17,7 @@
                 <a class="nav-link" [routerLink]="['/imagedb/imagedb/night/2018-03-25']">2018-03-25</a>
             </li>
             <li routerLinkActive="active" class="nav-item">
-                <a class="nav-link" [routerLink]="['/imagedb/imagedb/']">ImageDB</a>
+                <a class="nav-link" [routerLink]="['/imagedb/imagedb/observation']">ImageDB</a>
             </li>
         </ul>
     </div>
