--- a/src/app/imagedb/list-images/list-images.component.html
+++ b/src/app/imagedb/list-images/list-images.component.html
@@ -43,7 +43,7 @@
         <td>{{i + 1 + (currentPage * itemsPerPage)}}</td>
         <td>
             <a [routerLink]="['../../image', img.filename]">
-                <i class="fa fa-file-image-o" aria-hidden="true"> </i>
+                <fa-icon [icon]="faImage"></fa-icon>
                 {{img.filename | basename}}
             </a>
         </td>
@@ -55,7 +55,7 @@
         <td>{{img.exp_time}}s</td>
         <td>
             <a [href]="'/download/' + img.scheme + ':' + img.filename">
-                <i class="fa fa-download" aria-hidden="true"> </i>
+                <fa-icon [icon]="faDownload"></fa-icon>
                 download
             </a>
         </td>
