--- a/src/app/imagedb/list-observations/list-observations.component.html
+++ b/src/app/imagedb/list-observations/list-observations.component.html
@@ -41,7 +41,7 @@
     <tr *ngFor="let obs of observations; index as i;">
         <td>{{i + 1 + (currentPage * itemsPerPage)}}</td>
         <td><a [routerLink]="['../../observation', obs.name]">
-            <i class="fa fa-folder-open"></i> {{obs.name}}
+            <fa-icon [icon]="faImages"></fa-icon> {{obs.name}}
         </a></td>
         <td>{{obs.task_name}}</td>
         <td>{{obs.target_names.join(', ')}}</td>
