working on image search

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,7 +17,10 @@
                 <a class="nav-link" [routerLink]="['/imagedb/imagedb/night/2018-03-25']">2018-03-25</a>
             </li>
             <li routerLinkActive="active" class="nav-item">
-                <a class="nav-link" [routerLink]="['/imagedb/imagedb/observation']">ImageDB</a>
+                <a class="nav-link" [routerLink]="['/imagedb/imagedb/observation']">Search obs</a>
+            </li>
+            <li routerLinkActive="active" class="nav-item">
+                <a class="nav-link" [routerLink]="['/imagedb/imagedb/image']">Search images</a>
             </li>
         </ul>
     </div>
