--- a/src/app/imagedb/search-images/search-images.component.html
+++ b/src/app/imagedb/search-images/search-images.component.html
@@ -111,75 +111,72 @@
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
                     <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
+                        <fa-icon [icon]="faTh"></fa-icon>
                     </div>
                 </div>
                 <select id="binning" name="binning" class="form-control" ngModel>
                 </select>
             </div>
 
-            <label for="filter" class="col-form-label-sm">Filter:</label>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
+            <ng-container *ngIf="imageType=='flat' || imageType == 'light'">
+                <label for="filter" class="col-form-label-sm">Filter:</label>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <fa-icon [icon]="faFilter"></fa-icon>
+                        </div>
                     </div>
+                    <select id="filter" name="filter" class="form-control" ngModel>
+                    </select>
                 </div>
-                <select id="filter" name="filter" class="form-control" ngModel>
-                </select>
-            </div>
+            </ng-container>
 
-            <label for="exp_time" class="col-form-label-sm">Exposure time:</label>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
+            <ng-container *ngIf="imageType=='dark' || imageType == 'light'">
+                <label for="exp_time" class="col-form-label-sm">Exposure time:</label>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <fa-icon [icon]="faClock"></fa-icon>
+                        </div>
                     </div>
+                    <input id="exp_time" name="exp_time" class="form-control" type="number" placeholder="Exp. time"
+                           ngModel>
                 </div>
-                <input id="exp_time" name="exp_time" class="form-control" type="number" placeholder="Exp. time"
-                       ngModel>
-            </div>
+            </ng-container>
         </div>
 
         <div class="col-4">
-            <label for="target" class="col-form-label-sm">Target:</label>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
+            <ng-container *ngIf="imageType == 'light'">
+                <label for="target" class="col-form-label-sm">Target:</label>
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <fa-icon [icon]="faStar"></fa-icon>
+                        </div>
                     </div>
+                    <input id="target" name="target" class="form-control" type="number" placeholder="Target"
+                           ngModel>
                 </div>
-                <input id="target" name="target" class="form-control" type="number" placeholder="Target"
-                       ngModel>
-            </div>
+            </ng-container>
         </div>
 
-        <div class="col-4">
-            <label for="ra" class="col-form-label-sm">Target:</label>
+        <div class="col-4" *ngIf="imageType == 'light'">
+            <label for="coordinates" class="col-form-label-sm">Coordinates:</label>
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
                     <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
+                        <fa-icon [icon]="faMapMarker"></fa-icon>
                     </div>
                 </div>
-                <input id="ra" name="ra" class="form-control" type="text" placeholder="RA" ngModel>
-            </div>
-
-            <label for="dec" class="col-form-label-sm">Dec:</label>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
-                    </div>
-                </div>
-                <input id="dec" name="dec" class="form-control" type="text" placeholder="Dec" ngModel>
+                <input id="coordinates" name="coordinates" class="form-control" type="text"
+                       placeholder="Coordinates" ngModel>
             </div>
 
             <label for="radius" class="col-form-label-sm">Radius:</label>
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
                     <div class="input-group-text">
-                        <fa-icon [icon]="faUser"></fa-icon>
+                        <fa-icon [icon]="faCircle"></fa-icon>
                     </div>
                 </div>
                 <input id="radius" name="radius" class="form-control" type="text" placeholder="Radius" ngModel>
