removed lazy loading in favor of static binding

--- a/src/app/cooling/cooling.component.html
+++ b/src/app/cooling/cooling.component.html
@@ -28,7 +28,7 @@
 
     <div class="col-md-4">
         <h3>Config</h3>
-        <form #coolingForm="ngForm" (submit)="set_cooling(coolingForm)">
+        <form #coolingForm="ngForm" (submit)="set_cooling()">
             <div class="form-group row">
                 <label for="setTemp" class="col-sm-4 control-label">Setpoint:</label>
                 <div class="col-sm-8">
