--- a/src/app/camera/take-image/take-image.component.html
+++ b/src/app/camera/take-image/take-image.component.html
@@ -14,7 +14,7 @@
         <label for="inputExpTime">ExpTime [ms]:</label>
         <input type="number" class="form-control" id="inputExpTime" placeholder="ExpTime [ms]"
                name="exposure_time" step="1000"
-               [ngModel]="settings.exposure_time" [disabled]="settings.imgtype=='bias'"
+               [ngModel]="settings.exposure_time" [disabled]="settings.image_type=='bias'"
                required>
     </div>
     <div class="form-group">
