--- a/src/app/focus/focus.component.html
+++ b/src/app/focus/focus.component.html
@@ -1,19 +1,19 @@
-<div class="row" *ngIf="focus_status$ | async; let status">
+<div class="row" *ngIf="focus_status$ | async as let status">
     <div class="col-md-4">
         <h3>Focus</h3>
-        <form #focusForm="ngForm" (submit)="track(focusForm)">
+        <form #focusForm="ngForm">
             <div class="form-group row">
                 <label for="curFocus" class="col-sm-4 col-form-label">Cur focus:</label>
                 <div class="col-sm-8">
                     <input type="text" readonly class="form-control" id="curFocus"
-                           value="{{status.Focus}} mm">
+                           value=" mm">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="focus" class="col-sm-4 col-form-label">New focus:</label>
                 <div class="col-sm-8">
                     <input type="number" class="form-control" name="focus" id="focus" placeholder="Focus"
-                           [(ngModel)]="focus" required>
+                           required>
                 </div>
             </div>
             <div class="form-group row">
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group row">
                 <div class="offset-sm-4 col-sm-8">
-                    <button type="button" class="btn btn-block btn-default" (click)="set_optimal_focus()">
+                    <button type="button" class="btn btn-block btn-default">
                         Set optimal focus
                     </button>
                 </div>
