--- a/src/app/camera/image-preview/image-preview.component.html
+++ b/src/app/camera/image-preview/image-preview.component.html
@@ -1,5 +1,5 @@
 <p>
-    <a [hidden]="image===null" href="download/{{image}}">
+    <a [hidden]="image===null" href="{{basePath}}/download/{{image}}">
         Download image
     </a>
     <strong [hidden]="image!==null">No image taken</strong>
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <img *ngIf="image?.length>0" src="/preview/{{image}}" width="100%">
+        <img *ngIf="image?.length>0" src="{{basePath}}/preview/{{image}}" width="100%">
     </div>
     <div class="col-md-4" style="font-size: smaller;">
         <table class="table table-striped table-bordered table-hover table-sm" *ngIf="fits_headers$ | async as hdr">
