--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,20 +8,20 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <ng-container *ngFor="let module of modules">
-                <li *ngFor="let link of module.links" routerLinkActive="active" class="nav-item">
-                    <a class="nav-link" [routerLink]="link.link">{{link.label}}</a>
-                </li>
-            </ng-container>
+            <li *ngFor="let link of links" routerLinkActive="active" class="nav-item">
+                <a class="nav-link" [routerLink]="link.link">{{link.label}}</a>
+            </li>
+            <!--
             <li routerLinkActive="active" class="nav-item">
-                <a class="nav-link" [routerLink]="['/imagedb/imagedb/night/2018-03-25']">2018-03-25</a>
+                <a class="nav-link" [routerLink]="['/imagedb/night/2018-03-25']">2018-03-25</a>
             </li>
             <li routerLinkActive="active" class="nav-item">
-                <a class="nav-link" [routerLink]="['/imagedb/imagedb/observation']">Search obs</a>
+                <a class="nav-link" [routerLink]="['/imagedb/observation']">Search obs</a>
             </li>
             <li routerLinkActive="active" class="nav-item">
-                <a class="nav-link" [routerLink]="['/imagedb/imagedb/image']">Search images</a>
+                <a class="nav-link" [routerLink]="['/imagedb/image']">Search images</a>
             </li>
+            -->
         </ul>
     </div>
 </nav>
