--- a/src/app/imagedb/search-images/search-images.component.html
+++ b/src/app/imagedb/search-images/search-images.component.html
@@ -198,5 +198,5 @@
 
 </form>
 
-<pytel-list-images [module]="module" [query]="query" *ngIf="query!==null">
+<pytel-list-images [module]="module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
 </pytel-list-images>
