--- a/src/app/imagedb/observation-details/observation-details.component.html
+++ b/src/app/imagedb/observation-details/observation-details.component.html
@@ -9,9 +9,11 @@
 </ng-template>
 
 <h4>Raw files</h4>
-<pytel-list-images [module]="module" [query]="{observation: observation, reduction_status: 0}" [itemsPerPage]="10">
+<pytel-list-images [module]="module" [imagedb_path]="imagedb_path"
+                   [query]="{observation: observation, reduction_status: 0}" [itemsPerPage]="10">
 </pytel-list-images>
 
 <h4>Reduced files</h4>
-<pytel-list-images [module]="module" [query]="{observation: observation, reduction_status: 1}" [itemsPerPage]="10">
+<pytel-list-images [module]="module" [imagedb_path]="imagedb_path"
+                   [query]="{observation: observation, reduction_status: 1}" [itemsPerPage]="10">
 </pytel-list-images>
